--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,10 @@ dependencies:
     sdk: flutter
   sensors_plus: ^4.0.2
   geolocator: ^10.1.0
+  shared_preferences: ^2.2.2
+  url_launcher: ^6.2.5
+  sqflite: ^2.3.2
+  path: ^1.8.3
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
